--- a/style.css
+++ b/style.css
@@ -1,26 +1,34 @@
 body {
-    --gold: #ffce53;
+    --gold: linear-gradient(175deg, rgba(255, 206, 83, 1) 50%, rgba(145, 117, 45, 1) 100%);
+    --second: purple;
     display: flex;
     justify-content: center;
 }
 
 #root {
+    font-family: Georgia;
     width: 21cm;
     height: 29.7cm;
     border: 5px solid red;
     display: grid;
-    grid-template-areas: 
-    'portret contact'
-    'experience-header experience-description'
-    'projects-header projects-description'
-    'skills-header skills-description'
+    grid-template-areas:
+        'portret contact'
+        'experience-header experience-description'
+        'projects-header projects-description'
+        'skills-header skills-description'
     ;
     grid-template-columns: 50% 50%;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 25% 25% 25% 25%;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    margin: 0
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0;
+    width: fit-content;
 }
 
 .container {
@@ -28,8 +36,28 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .filled {
-    background: purple;
+    background: var(--second);
     color: whitesmoke
+}
+
+#photo {
+    padding: 0;
+    max-height: 100%;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#profile-circle {
+    border-radius: 300px;
+    aspect-ratio: 1;
+    height: 85%;
+    overflow: hidden;
+}
+
+#photo img {
+    max-width: 100%;
 }
 
 #contact {
@@ -40,7 +68,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #contact h1 {
-    color: var(--gold);
+    color: var(--second);
 }
 
 .title {
@@ -57,13 +85,29 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #experience-title {
-    color: var(--gold);
+    color: var(--second);
 }
 
 #experience-description {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
+}
+
+#experience-description h2 {
+  background: var(--gold);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+#projects-title {
+    color: var(--gold);
+}
+
+#projects-title>p {
+    background: var(--gold);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 #projects-description {
@@ -72,12 +116,13 @@ h1, h2, h3, h4, h5, h6 {
     justify-content: space-around;
 }
 
-#projects-description a, #projects-description p {
+#projects-description a,
+#projects-description p {
     margin-left: 15px;
 }
 
 #projects-description h3 {
-    color: var(--gold);
+    color: var(--second);
 }
 
 #projects-description a {
@@ -90,11 +135,17 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #skills-title {
-    color: var(--gold);
+    color: var(--second);
 }
 
 #skills-description {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+}
+
+#skills-description h3 {
+    background: var(--gold);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
